# acs-y1-q2

./: .gitignore  CMakeLists.txt
main/: CMakeLists.txt  accelerometer.c  accelerometer.h  app_config.h  app_wifi.c  app_wifi.h  buzzer.c  buzzer.h  card_reader.c  card_reader.h  i2c_master_bus.c  i2c_master_bus.h  idf_component.yml  main.c  metrics_publisher.c  metrics_publisher.h  queue.c  queue.h  task_orchastrator.c  task_orchastrator.h  time_of_flight.c  time_of_flight.h  time_sync.c  time_sync.h  wifi.c  wifi_manager.c  wifi_manager.h
main/include/: i2c_addrs.h  pin_defs.h
